--- a/terraform/project-one/backend.conf
+++ b/terraform/project-one/backend.conf
@@ -3,3 +3,4 @@ storage_account_name = "archontf"
 container_name       = "tfstate"
 key                  = "project-one.tfstate"
 subscription_id      = "7ace3973-3541-4d33-a7de-ad1793783b96"
+use_azuread_auth     = true
