Add resource provider registrations to backend configuration

--- a/terraform/project-one/backend.conf
+++ b/terraform/project-one/backend.conf
@@ -4,3 +4,4 @@ container_name       = "tfstate"
 key                  = "project-one.tfstate"
 subscription_id      = "7ace3973-3541-4d33-a7de-ad1793783b96"
 use_azuread_auth     = true
+resource_provider_registrations = "none"
