Add namespace declaration for svcs-base release in helmfile.yaml

--- a/kubernetes/common/helmfile.yaml
+++ b/kubernetes/common/helmfile.yaml
@@ -190,6 +190,7 @@ releases:
 
   - name: svcs-base
     chart: "../../helms/svcs-base"
+    namespace: default
     needs:
       - istio-system/istiod
       - archon-system/cert-manager
