Fix syntax for required environment variable in helmfile.yaml

--- a/kubernetes/workload/helmfile.yaml
+++ b/kubernetes/workload/helmfile.yaml
@@ -1,7 +1,7 @@
 environments:
   default:
     values:
-      - { { requiredEnv "VALUES_FILE" } }
+      - "{{ requiredEnv "VALUES_FILE" }}"
 ---
 bases:
   - ../common/helmfile.yaml
