Add ASLR check script to verify Address Space Layout Randomization configuration
This commit introduces a new script, AslrCheck.sh, which checks the current
ASLR setting on the system. The script retrieves the value of
kernel.randomize_va_space and verifies if it is set to 2, indicating that
ASLR is properly configured. If ASLR is not configured correctly, an error
message is displayed and the script returns a failure status.

--- a/containers/my-app.json
+++ b/containers/my-app.json
@@ -3,5 +3,10 @@
   "description": "My amazing FedRAMP-compliant application!",
   "image": "ghcr.io/Archon-Technologies/archon-demo-node-app",
   "destination": "my-organization/my-app",
-  "tag": "1.0-test"
+  "tag": "1.0-test",
+  "stig": {
+    "enabled": true,
+    "filepath": "ssg-chainguard-gpos-ds.xml",
+    "profile": "xccdf_basic_profile_.check"
+  }
 }
