Update reportDir in archon-jenkins.yaml and archon-keycloak.yaml to use current directory

--- a/scanning/archon-jenkins.yaml
+++ b/scanning/archon-jenkins.yaml
@@ -54,12 +54,12 @@ jobs:
   - type: report
     parameters:
       template: traditional-json
-      reportDir: /zap/wrk/
+      reportDir: "."
       reportTitle: "ZAP Report"
       reportDescription: "ZAP Report"
   - type: report
     parameters:
       template: traditional-pdf
-      reportDir: /zap/wrk/
+      reportDir: "."
       reportTitle: "ZAP Report"
       reportDescription: "ZAP Report"
