--- a/scanning/archon-keycloak.yaml
+++ b/scanning/archon-keycloak.yaml
@@ -56,12 +56,12 @@ jobs:
   - type: report
     parameters:
       template: traditional-json
-      reportDir: /zap/wrk/
+      reportDir: "."
       reportTitle: "ZAP Report"
       reportDescription: "ZAP Report"
   - type: report
     parameters:
       template: traditional-pdf
-      reportDir: /zap/wrk/
+      reportDir: "."
       reportTitle: "ZAP Report"
       reportDescription: "ZAP Report"
