Update includePaths in archon-keycloak.yaml to use Z_URL_REGEX for Authentication Test

--- a/scanning/archon-keycloak.yaml
+++ b/scanning/archon-keycloak.yaml
@@ -4,7 +4,7 @@ env:
       urls:
         - ${Z_URL}
       includePaths:
-        - ${Z_URL}.*
+        - ${Z_URL_REGEX}.*
       authentication:
         method: browser
         parameters:
