--- a/containers/my-app.json
+++ b/containers/my-app.json
@@ -6,7 +6,7 @@
   "tag": "1.0-test",
   "stig": {
     "enabled": true,
-    "filepath": "ssg-chainguard-gpos-ds.xml",
+    "filepath": "ssg-archon-gpos-ds.xml",
     "profile": "xccdf_basic_profile_.check"
   }
 }
