--- a/kubernetes/default/helmfile.yaml
+++ b/kubernetes/default/helmfile.yaml
@@ -36,13 +36,19 @@ releases:
               default:
                 driver: sql
                 sql:
-                  driver: postgres
+                  driver: postgres12
                   host: {{ .Values.postgres.swag.fqdn | quote }}
                   port: 5432
                   database: {{ .Values.postgres.swag.databaseName | quote }}
                   user: {{ .Values.postgres.swag.identityName | quote }}
               visibility:
                 driver: sql
+                sql:
+                  driver: postgres12
+                  host: {{ .Values.postgres.swag.fqdn | quote }}
+                  port: 5432
+                  database: {{ .Values.postgres.swag.databaseName | quote }}
+                  user: {{ .Values.postgres.swag.identityName | quote }}
           replicaCount: 2
           image:
             repository: {{ .Values.registry }}/temporalio/server-fips
