--- a/helmcharts/temporal/templates/serviceaccount.yaml
+++ b/helmcharts/temporal/templates/serviceaccount.yaml
@@ -4,6 +4,9 @@ kind: ServiceAccount
 metadata:
   name: {{ include "temporal.serviceAccountName" $ }}
   labels:
+    {{- with .Values.serviceAccount.labels }}
+    {{- toYaml . | nindent 4 }}
+    {{- end }}
     {{- include "temporal.resourceLabels" (list $ "" "") | nindent 4 }}
   annotations:
     helm.sh/hook: pre-install, pre-upgrade
